Add Vue to the mix

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <h1 id="test">Hello World!</h1>
-    <div id="app">{{ message }}</div>
+    <div id="app"></div>
 
     <script src="./dist/main.js"></script>
 </body>
