--- a/public/index.html
+++ b/public/index.html
@@ -2,20 +2,58 @@
 <head>
     <title>MuzMatch</title>
 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Insert CSS here -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <style>
+        body {
+            background-color: #E8516E;
+        }
+
+        textarea:focus,
+        input[type="text"]:focus,
+        input[type="password"]:focus,
+        input[type="datetime"]:focus,
+        input[type="datetime-local"]:focus,
+        input[type="date"]:focus,
+        input[type="month"]:focus,
+        input[type="time"]:focus,
+        input[type="week"]:focus,
+        input[type="number"]:focus,
+        input[type="email"]:focus,
+        input[type="url"]:focus,
+        input[type="search"]:focus,
+        input[type="tel"]:focus,
+        input[type="color"]:focus,
+        .uneditable-input:focus {
+            border-color: #e8516e;
+            box-shadow: 0 1px 1px #e8516e inset, 0 0 8px #e8516e;
+            outline: 0 none;
+        }
+
+    </style>
+
+    <!-- Insert JS here -->
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="./../socket.io/socket.io.js"></script>
-    <script>
-        var socket = io()
-        socket.on('test', (number)=> {
-            document.getElementById('test').innerHTML = number
-        })
-    </script>
-
 
 </head>
 <body>
-    <h1 id="test">Hello World!</h1>
-    <div id="app"></div>
+    <div class="container">
+        <div class="row my-5">
+            <div class="col-12 col-md-8">
+                <iframe style="width:100%;height:475px;"
+                        src="https://www.youtube.com/embed/1btWFHjjqrs?autoplay=1"
+                        frameborder="0"
+                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"></iframe>
+            </div>
+            <div class="col-12 col-md-4 mt-3 mt-md-0">
+                <div id="app"></div>
+            </div>
+        </div>
+    </div>
+
 
     <script src="./dist/main.js"></script>
 </body>
