Finish the App and add Readme file

--- a/public/index.html
+++ b/public/index.html
@@ -11,22 +11,7 @@
             background-color: #E8516E;
         }
 
-        textarea:focus,
-        input[type="text"]:focus,
-        input[type="password"]:focus,
-        input[type="datetime"]:focus,
-        input[type="datetime-local"]:focus,
-        input[type="date"]:focus,
-        input[type="month"]:focus,
-        input[type="time"]:focus,
-        input[type="week"]:focus,
-        input[type="number"]:focus,
-        input[type="email"]:focus,
-        input[type="url"]:focus,
-        input[type="search"]:focus,
-        input[type="tel"]:focus,
-        input[type="color"]:focus,
-        .uneditable-input:focus {
+        input[type="text"]:focus {
             border-color: #e8516e;
             box-shadow: 0 1px 1px #e8516e inset, 0 0 8px #e8516e;
             outline: 0 none;
@@ -44,7 +29,7 @@
         <div class="row my-5">
             <div class="col-12 col-md-8">
                 <iframe style="width:100%;height:475px;"
-                        src="https://www.youtube.com/embed/1btWFHjjqrs?autoplay=1"
+                        src="https://www.youtube.com/embed/XOacA3RYrXk?autoplay=1"
                         frameborder="0"
                         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"></iframe>
             </div>
